# DjangoLerningStart

./: .gitignore  docker-compose.yaml  pyproject.toml  readme-ru.txt  readme.txt  requirements.txt
training_site/frontend/: package-lock.json  package.json  urls.py  views.py  webpack.config.js
training_site/frontend/src/: axios_students.js  fetch_courses.js
training_site/frontend/templates/frontend/: requests-check.html  test-page.html
training_site/training_site/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
training_site/training_site_app/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
training_site/training_site_app/migrations/: 0001_initial.py  0002_alter_lesson_video.py  0003_alter_lesson_video.py  0004_alter_lesson_name.py  0005_alter_lesson_course.py
training_site/training_site_app/templates/training_site_app/: complex_query_for_courses_optimized.html  complex_query_for_courses_slow.html  complex_query_for_lessons_slow.html  complex_query_for_students.html  complex_query_for_students_optimized.html  contacts.html  course_confirm_delete.html  course_detail.html  course_form.html  course_list.html  course_update_form.html  email_sent.html  menu.html
